--- a/PBDesk.Utils.Tests/PBDesk.Utils.Tests.csproj
+++ b/PBDesk.Utils.Tests/PBDesk.Utils.Tests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="StringUtilsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MyUtilsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PBDesk.Utils\PBDesk.Utils.csproj">
